--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bank This</title>
+        <title>Test</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
   		  <!-- Compiled and minified CSS -->
